--- a/index.html
+++ b/index.html
@@ -15,17 +15,54 @@
 
     <body>
         <header>
+            <div class="jumbotron">
+                <h1 class="display-4">IT-3049C Chat</h1>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="fas fa-user"></i>
+                        </span>
+                    </div>
+                    <input id="my-name-input" type="text" class="form-control" placeholder="Name" value="William Koonce">
+                </div>
 
+              </div>
         </header>
 
         <div id="chat">
+            <div class="mine messages">
+                <div class="message">
+                    Dude
+                </div>
+            </div>
+            <div class="yours messages">
+                <div class="message">
+                    Hey!
+                </div>
+                <div class="sender-info">
+                    Someone 2:59PM
+                </div>
+            </div>
 
         </div>
         
-        <footer>
-
-        </footer>
         <!-- Our own Scripts -->
         <script src="resources/js/index.js"></script>
     </body>
+    <footer>
+        <div id="chatbar" class="input-group mb-3">
+            <input
+                type="text"
+                id="my-message"
+                class="form-control"
+                placeholder="Type a message ...">
+            <div class="input-group-append">
+                <button
+                    class="btn btn-outline-primary"
+                    id="send-button"
+                    type="button">Send</button>
+                    
+            </div>
+        </div>
+    </footer>
 </html>
