--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
                         </span>
                     </div>
                     <input id="my-name-input" type="text" class="form-control" placeholder="Name" value="William Koonce">
+                    <button
+                    class="btn btn-outline-primary"
+                    id="update-button"
+                    type="button"
+                   >Update Name</button>
+                   <button
+                   class="btn btn-outline-primary"
+                   id="save-button"
+                   type="button"
+                  >Save Name</button>
                 </div>
 
               </div>
